Navbar: align text, add hover, fix to top

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,21 @@
+body {
+  height: 3000px;
+}
+
+.navbar-brand {
+  padding-top: 0;
+  margin-top: 0;
+}
+
+nav ul {
+  margin-top: 7px;
+}
+
 .nav-link {
   text-align: center;
+  margin-right: 20px;
+}
+
+.nav-link:hover {
+  color: blue;
 }
